# se.plan

./: .dockerignore  .gitignore  .pre-commit-config.yaml  1_AdvancedUsage.ipynb  CHANGELOG.md  CONTRIBUTE.rst  Dockerfile  LICENSE  README.md  README.rst  Untitled.ipynb  about_ui.ipynb  aoi_selector_ui.ipynb  aoi_ui.ipynb  compute_ui.ipynb  crowdin.yml  customize_layer_ui.ipynb  docker-compose.override.yml  docker-compose.yml  get_all_values.ipynb  loading_time.py  logging.example.toml  logging_config.toml  manual_selection_ui.ipynb  map_ui.ipynb  new_ui.ipynb  no_ui.ipynb  notebook_ui.ipynb  noxfile.py  orphan_bug.py  pyproject.toml  questionnaire_ui.ipynb  quintile_ui.ipynb  requirements-visual-test.txt  requirements.txt  run_solara.sh  sepal_environment.yml  solara.py  solara_.py  solara_app.py  (+12 more)
.github/: CODEOWNERS
assets/: custom.css  custom.js
component/: delete.py  types.py
data/: layer_list.csv
doc/: en.rst
docs/: workflow.md
fra/: __init__.py  functions.py
notebooks/: test_constraint_row.ipynb  test_dashboard.ipynb  test_dialog.ipynb  test_legend.ipynb  test_no_ui.ipynb  test_quintiles.ipynb  test_recipe_tile.ipynb  ui.ipynb
scripts/: compute.py  default_layer_io.py  default_questionnaire_io.py  message.py  parameter.py
tests/: conftest.py  no_test_ui.py  test_PreviewMap.ipynb  test_aoi_bounds.py  test_aoi_tile.ipynb  test_aoi_zoom_snapshot.py  test_assets.py  test_async_race_guards.py  test_batched_fallback.py  test_constraint_validation.py  test_constraint_widget.ipynb  test_custom_aoi_containment.py  test_custom_aoi_tile.py  test_dan.ipynb  test_dashboard.ipynb  test_dashboard_stats.py  test_export_csv.py  test_export_viz.py  test_gaul_migration.py  test_get_limits.py  test_index.ipynb  test_mapTile.ipynb  test_quintiles.ipynb  test_recipe.py  test_recipe_header_sync.py  test_recipe_invalid_constraints.py  test_recipe_tile.ipynb  test_seplan_model.py  test_seplan_normalization.py  test_statistics_integration.py  test_tables.ipynb  test_ui.py  test_ui_helpers.py  test_validation.py  test_zoom.ipynb
ui-tests/: package.json  playwright.config.js  voila-benchmark-expected.json
ui_tests/: RecipeInspector.ipynb  test.ipynb  test_aoi_tile.ipynb  test_constraint_row.ipynb  test_constraint_widget.ipynb  test_dan.ipynb  test_dashboard.ipynb  test_dialog.ipynb  test_export_dialog.ipynb  test_graph.ipynb  test_index.ipynb  test_mapTile.ipynb  test_preview_map.ipynb  test_question_tile.ipynb  test_questionnaire_tile.ipynb  test_recipe_inspector.ipynb  test_recipe_tile.ipynb  test_scenario_AddWidget.ipynb  test_table_toolbar.ipynb  (+1 more)
utils/: ABOUT.md  (+14 more)
(+214 files in other folders)
